--- a/int3checkpoint/changer.html
+++ b/int3checkpoint/changer.html
@@ -1,4 +1,4 @@
-a <!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,10 @@ a <!DOCTYPE html>
     <title>Document</title>
 </head>
 <body>
+    <input id="newBGColor">
+    <button id="colorChangeButton"> Change Color! </button>
+ 
     <script src="changer.js"></script>
-    <input id="colorChangeButton"> Change Color! </button>
+   
 </body>
 </html>
